<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/splashScreenFragment">

    <action
        android:id="@+id/action_global_homeFragment"
        app:destination="@id/homeFragment"
        app:popUpToInclusive="true" />

    <fragment
        android:id="@+id/splashScreenFragment"
        android:name="com.devfutech.pemrogramandasar.ui.SplashScreenFragment"
        android:label="@string/splash_screen"
        tools:layout="@layout/splash_screen_fragment">
        <action
            android:id="@+id/action_splashScreenFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/splashScreenFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_splashScreenFragment_to_introFragment"
            app:destination="@id/introFragment" />
    </fragment>
    <fragment
        android:id="@+id/homeFragment"
        android:name="com.devfutech.pemrogramandasar.ui.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/home_fragment">
        <action
            android:id="@+id/action_homeFragment_to_KIKDFragment"
            app:destination="@id/KIKDFragment" />
        <action
            android:id="@+id/action_homeFragment_to_materiFragment"
            app:destination="@id/materiFragment" />
        <action
            android:id="@+id/action_homeFragment_to_videoFragment"
            app:destination="@id/videoFragment" />
        <action
            android:id="@+id/action_homeFragment_to_kuisFragment"
            app:destination="@id/kuisFragment" />
        <action
            android:id="@+id/action_homeFragment_to_infoFragment"
            app:destination="@id/infoFragment" />
        <action
            android:id="@+id/action_homeFragment_to_pustakaFragment"
            app:destination="@id/pustakaFragment" />
    </fragment>
    <fragment
        android:id="@+id/KIKDFragment"
        android:name="com.devfutech.pemrogramandasar.ui.KIKDFragment"
        android:label="kikd_fragment"
        tools:layout="@layout/kikd_fragment" />
    <fragment
        android:id="@+id/materiFragment"
        android:name="com.devfutech.pemrogramandasar.ui.MateriFragment"
        android:label="materi_fragment"
        tools:layout="@layout/materi_fragment">
        <action
            android:id="@+id/action_materiFragment_to_contentMateriFragment"
            app:destination="@id/contentMateriFragment" />
    </fragment>
    <fragment
        android:id="@+id/videoFragment"
        android:name="com.devfutech.pemrogramandasar.ui.VideoFragment"
        android:label="video_fragment"
        tools:layout="@layout/video_fragment" />
    <fragment
        android:id="@+id/kuisFragment"
        android:name="com.devfutech.pemrogramandasar.ui.KuisFragment"
        android:label="kuis_fragment"
        tools:layout="@layout/kuis_fragment" />
    <fragment
        android:id="@+id/pustakaFragment"
        android:name="com.devfutech.pemrogramandasar.ui.PustakaFragment"
        android:label="pustaka_fragment"
        tools:layout="@layout/pustaka_fragment" />
    <fragment
        android:id="@+id/infoFragment"
        android:name="com.devfutech.pemrogramandasar.ui.InfoFragment"
        android:label="info_fragment"
        tools:layout="@layout/info_fragment" />
    <fragment
        android:id="@+id/contentMateriFragment"
        android:name="com.devfutech.pemrogramandasar.ui.ContentMateriFragment"
        android:label="content_materi_fragment"
        tools:layout="@layout/content_materi_fragment">
        <argument
            android:name="subMateri"
            app:argType="com.devfutech.pemrogramandasar.data.model.SubMateri" />
        <action
            android:id="@+id/action_contentMateriFragment_to_bottomDialogFragment"
            app:destination="@id/bottomDialogFragment" />
    </fragment>
    <fragment
        android:id="@+id/introFragment"
        android:name="com.devfutech.pemrogramandasar.ui.IntroFragment"
        android:label="@string/intro"
        tools:layout="@layout/intro_fragment">
        <action
            android:id="@+id/action_introFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
    </fragment>
    <dialog
        android:id="@+id/bottomDialogFragment"
        android:name="com.devfutech.pemrogramandasar.ui.BottomDialogFragment"
        android:label="fragment_bottom_dialog"
        tools:layout="@layout/fragment_bottom_dialog">
        <argument
            android:name="content"
            app:argType="com.devfutech.pemrogramandasar.data.model.Content"
            app:nullable="true"
            android:defaultValue="@null" />
        <argument
            android:name="video"
            app:argType="string"
            app:nullable="true"
            android:defaultValue="@null" />
    </dialog>
</navigation>